--- a/index.html
+++ b/index.html
@@ -21,32 +21,51 @@
         var ctx = canvas.getContext("2d");
         var dbg_canvas = document.getElementById("dbgCanvas");
         var dbg_ctx = dbg_canvas.getContext("2d");
-        ctx.beginPath();
-        ctx.rect(240, 160, 150, 90);
-        ctx.fillStyle = "blue";
-        ctx.fill();
-        ctx.closePath();
-        // draw to the debug canvas
-        
-        dbg_ctx.beginPath();
-            dbg_ctx.arc(240, 160, 150, 0, Math.PI * 2, false);
-            dbg_ctx.fillStyle = "green";
-            dbg_ctx.stroke();
-            dbg_ctx.closePath();
-    dbg_ctx.beginPath();
-    dbg_ctx.arc(320, 110, 50, 0, Math.PI * 2, false);
-    dbg_ctx.fillStyle = "green";
-    dbg_ctx.stroke();
-    dbg_ctx.closePath(); dbg_ctx.beginPath();
-        dbg_ctx.arc(160, 110, 50, 0, Math.PI * 2, false);
-        dbg_ctx.fillStyle = "green";
-        dbg_ctx.stroke();
-        dbg_ctx.closePath();
-        dbg_ctx.beginPath();
-            dbg_ctx.rect(240-150/2, 180, 150, 90);
-            dbg_ctx.fillStyle = "blue";
-            dbg_ctx.fill();
-            dbg_ctx.closePath();
+        var x = canvas.width / 2;
+        var y = canvas.height - 30;
+        var dx = -2;
+        var dy = -2;
+
+        function drawBall() {
+            ctx.beginPath();
+            ctx.arc(x, y, 10, 0, Math.PI * 2);
+            ctx.fillStyle = "#0095DD";
+            ctx.fill();
+            ctx.closePath();
+        }
+
+        function bounceBall() {
+            // change direction when ball hits a wall
+            if (x < 0) {
+                dx = 2;
+            }
+            if (x > 480) {
+                dx = -2
+            }
+            if (y > 320) {
+                dy = -2
+            }
+            if (y < 0) {
+                dy = 2
+            }
+        }
+
+        function moveBall() {
+            // change ball position by delta (current speed)
+            x += dx;
+            y += dy;
+        }
+
+        function draw() {
+            //erase screen so we don't leave trails
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            drawBall();
+            bounceBall();
+            moveBall();
+        }
+
+        setInterval(draw, 10);
+
 </script>
 
 </body>
