added paddle and keyboard input

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Gamedev Canvas Workshop</title>
     <style>
     	* { padding: 0; margin: 0; }
-    	canvas { background: rgb(80, 55, 80); display: block; margin: 0 auto; }
+    	canvas { background: rgba(16, 75, 26, 0.856); display: block; margin: 0 auto; }
     </style>
 </head>
 <body>
@@ -18,54 +18,84 @@
 <script>
 	// JavaScript code goes here
         var canvas = document.getElementById("myCanvas");
-        var ctx = canvas.getContext("2d");
-        var dbg_canvas = document.getElementById("dbgCanvas");
-        var dbg_ctx = dbg_canvas.getContext("2d");
-        var x = canvas.width / 2;
-        var y = canvas.height - 30;
-        var dx = -2;
-        var dy = -2;
+            var ctx = canvas.getContext("2d");
+            var ballRadius = 10;
+            var x = canvas.width / 2;
+            var y = canvas.height - 30;
+            var dx = 2;
+            var dy = -2;
+            var paddleHeight = 10;
+            var paddleWidth = 75;
+            var paddleX = (canvas.width - paddleWidth) / 2;
+            var rightPressed = false;
+            var leftPressed = false;
 
-        function drawBall() {
-            ctx.beginPath();
-            ctx.arc(x, y, 10, 0, Math.PI * 2);
-            ctx.fillStyle = "#0095DD";
-            ctx.fill();
-            ctx.closePath();
-        }
+            document.addEventListener("keydown", keyDownHandler, false);
+            document.addEventListener("keyup", keyUpHandler, false);
 
-        function bounceBall() {
-            // change direction when ball hits a wall
-            if (x < 0) {
-                dx = 2;
+            function keyDownHandler(e) {
+                if (e.key == "Right" || e.key == "ArrowRight") {
+                    rightPressed = true;
+                }
+                else if (e.key == "Left" || e.key == "ArrowLeft") {
+                    leftPressed = true;
+                }
             }
-            if (x > 480) {
-                dx = -2
+
+            function keyUpHandler(e) {
+                if (e.key == "Right" || e.key == "ArrowRight") {
+                    rightPressed = false;
+                }
+                else if (e.key == "Left" || e.key == "ArrowLeft") {
+                    leftPressed = false;
+                }
             }
-            if (y > 320) {
-                dy = -2
+
+            function drawBall() {
+                ctx.beginPath();
+                ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
+                ctx.fillStyle = "red";
+                ctx.fill();
+                ctx.closePath();
             }
-            if (y < 0) {
-                dy = 2
+            function drawPaddle() {
+                ctx.beginPath();
+                ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
+                ctx.fillStyle = "black";
+                ctx.fill();
+                ctx.closePath();
             }
-        }
 
-        function moveBall() {
-            // change ball position by delta (current speed)
-            x += dx;
-            y += dy;
-        }
+            function draw() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                drawBall();
+                drawPaddle();
 
-        function draw() {
-            //erase screen so we don't leave trails
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawBall();
-            bounceBall();
-            moveBall();
-        }
+                if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+                    dx = -dx;
+                }
+                if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
+                    dy = -dy;
+                }
 
-        setInterval(draw, 10);
+                if (rightPressed) {
+                    paddleX += 7;
+                    if (paddleX + paddleWidth > canvas.width) {
+                        paddleX = canvas.width - paddleWidth;
+                    }
+                }
+                else if (leftPressed) {
+                    paddleX -= 7;
+                    if (paddleX < 0) {
+                        paddleX = 0;
+                    }
+                }
 
+                x += dx;
+                y += dy;
+            }
+
+            setInterval(draw, 10);
 </script>
 
 </body>
